--- a/resources/components/creation.ejs
+++ b/resources/components/creation.ejs
@@ -1,3 +1,5 @@
-<div class="mx-auto px-2 sm:px-6 lg:px-8">
-  <center><div class="semi-bold text-white">© By <a href="https://hydren.game-net.site" class="text-blue-500">HydrenDashboard</a></div></center>
-</div>
+<footer class="py-4">
+  <div class="container mx-auto px-4 text-center text-gray-400 text-sm">
+      <span>© 2017 - 2024 Hydren, Inc.</span>
+  </div>
+</footer>
